# Myntra-Product-Recommendation

.github/workflows/: deploy-backend-lambda.yml  deploy-backend-v2.yml  deploy-backend.yml  deploy.yml  destroy.yml  terraform-deploy.yml  terraform-destroy.yml
backend/: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  app.py  create_lambda_layer.py  docker-compose.yml  main.py  ml_model.py  precompute_cosine.py  precompute_data.py  pyproject.toml  requirements.txt  server.py  template.yaml
backend/.aws-sam/: build.toml
backend/data/: recommendations.json
backend/database/: db.py  models.py
backend/resources/: product.py  routes.py
backend/terraform/: main.tf  output.tf  variables.tf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/components/Navbar/: SearchBar.tsx  index.tsx
frontend/src/components/Product/: index.tsx
frontend/src/components/ProductCard/: index.tsx
frontend/src/components/ProductsContainer/: index.tsx
frontend/src/components/SearchBar/: index.tsx
frontend/src/hooks/: useCarousel.tsx
frontend/src/lib/core/: Button.tsx  Loader.tsx
frontend/src/lib/icons/: index.tsx
frontend/src/pages/Home/: index.tsx
frontend/src/pages/Product/: Product.module.css  index.tsx  useApi.tsx
frontend/src/pages/SearchResult/: index.tsx
frontend/src/types/: type.ts
frontend/src/utils/: api.ts  formatters.ts
terraform/: ecr.tf  iam.tf  lambda.tf  provider.tf
