[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["KodeWithKK <kodewithkk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-restful = "^0.3.10"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.7.1"
python-dotenv = "^1.0.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
flask-cors = "^5.0.0"
flask-pymongo = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
